--- a/app/src/main/res/drawable/containerissue.xml
+++ b/app/src/main/res/drawable/containerissue.xml
@@ -1,27 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <shape xmlns:android="http://schemas.android.com/apk/res/android"
-        android:shape="rectangle" >
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <!-- View background color -->
-        <!--<solid-->
-            <!--android:color="#B2DFDB" >-->
-        <!--</solid>-->
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#d8d8d8" />
+            <corners android:radius="7dp" />
 
-        <!-- View border color and width -->
-        <stroke
-            android:width="3dp"
-            android:color="#FF5722" >
-        </stroke>
+        </shape>
+    </item>
+    <item>
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle" >
 
-        <!-- The radius makes the corners rounded -->
-        <corners
-            android:radius="5dp"   >
-        </corners>
+            <!-- View background color -->
+            <solid
+            android:color="#FFFFFF" >
+            </solid>
 
+            <!-- View border color and width -->
+            <stroke
+                android:width="2dp"
+                android:color="#E10028" >
+            </stroke>
 
-</shape>
+            <!-- The radius makes the corners rounded -->
+            <!--<corners-->
+                <!--android:radius="5dp"   >-->
+            <!--</corners>-->
+        </shape>
+    </item>
+
+    <!--<item android:bottom="3px">-->
+        <!--<shape  android:shape="rectangle">-->
+            <!--<solid android:color="#d4e9f7" />-->
+            <!--<corners android:radius="2dp" />-->
+        <!--</shape>-->
+
+    <!--</item>-->
+
 <!--<shape xmlns:android="http://schemas.android.com/apk/res/android"-->
     <!--android:shape="rectangle" >-->
     <!--<solid android:color="#ffffff" />-->
     <!--<stroke android:width="1dip" android:color="#4fa5d5"/>-->
 <!--</shape>-->
+
+</layer-list>
