--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
         android:text="Create an Event"
+        android:textColor="#000000"
         android:textSize="30sp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -22,6 +23,7 @@
 
         <EditText
             android:id="@+id/eName"
+            android:textColor="#000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
@@ -44,6 +46,7 @@
 
             android:ems="10"
             android:hint="Event Location"
+            android:textColor="#000000"
             android:inputType="textPersonName" />
 
     </android.support.design.widget.TextInputLayout>
@@ -59,6 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:textColor="#000000"
             android:hint="Event Description"
             android:inputType="textPersonName"
             android:layout_below="@+id/eLocation"
@@ -77,6 +81,7 @@
 
     <TextView
         android:id="@+id/eDate"
+        android:textColor="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="23dp"
@@ -88,6 +93,7 @@
 
     <TextView
         android:id="@+id/eTime"
+        android:textColor="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
