--- a/app/src/main/res/layout/activity_follow.xml
+++ b/app/src/main/res/layout/activity_follow.xml
@@ -25,6 +25,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="129dp"
-        android:textSize="36sp" />
+        android:textSize="36sp"
+        android:textColor="#000000"/>
 
 </RelativeLayout>
