--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,7 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.codepath.engage.ProfileActivity">
-
+    <ImageView
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        app:srcCompat="@color/black"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
     <TextView
         android:id="@+id/profileHeader"
         android:layout_width="wrap_content"
@@ -13,6 +19,7 @@
         android:gravity="center"
         android:text="My Profile"
         android:textSize="26sp"
+        android:textColor="#000000"
         android:padding="15dp"
         android:layout_centerHorizontal="true"
         android:layout_toEndOf="@+id/Home"
@@ -46,14 +53,15 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:layout_margin="10dp"
-        android:layout_below="@+id/bar" />
+        android:layout_below="@+id/bar"
+        android:layout_margin="10dp" />
 
     <TextView
         android:id="@+id/followers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Followers"
+        android:textColor="#000000"
         android:layout_below="@+id/profileImage"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"/>
@@ -63,6 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Following"
+        android:textColor="#000000"
         android:layout_below="@+id/followers"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"/>
@@ -95,5 +104,7 @@
             />
 
     </android.support.design.widget.CoordinatorLayout>
+
+
 
 </RelativeLayout>
