--- a/app/src/main/res/layout/event_details_activity.xml
+++ b/app/src/main/res/layout/event_details_activity.xml
@@ -17,6 +17,7 @@
 
             <TextView
                 android:id="@+id/tvHost"
+                android:textColor="#000000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -32,6 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvHost"
+                android:textColor="#000000"
                 android:layout_marginBottom="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
@@ -55,7 +57,9 @@
                 android:fontFamily="serif"
                 android:text="@string/event_name"
                 android:textSize="36sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="#000000"
+                />
             <fragment
                 android:id="@+id/youtubeFragment"
                 android:layout_below="@+id/tvEventDescription"
