--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -1,79 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp"
+    android:background="@drawable/viewevents_border"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/ivProfileImage"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_alignParentStart="true"
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        app:srcCompat="@android:color/black"
-        android:background="@drawable/border"/>
+        android:layout_centerHorizontal="true"
+        android:layout_margin="1.5dp"
+        android:layout_marginLeft="1.5dp"
+        android:layout_marginRight="1.dp"
+        android:background="@drawable/three_border_orange"
+        android:foregroundGravity="center_horizontal"
+        android:topLeftRadius="5dp"
+        android:topRightRadius="5dp"
+        app:srcCompat="@android:color/black" />
 
     <TextView
         android:id="@+id/tvEventName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/tvLocationInfo"
-        android:text="@string/event_name"
-        android:textSize="22sp"
+        android:layout_below="@+id/ivProfileImage"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:ellipsize="end"
+        android:foregroundGravity="center_vertical|center_horizontal"
+        android:gravity="center_vertical|center_horizontal"
         android:maxLines="3"
         android:minLines="1"
-        android:ellipsize="end"
-        android:textStyle="bold"
-        android:layout_marginEnd="20dp"
-        android:layout_alignTop="@+id/ivProfileImage"
-        />
+        android:text="@string/event_name"
+        android:textColor="#000000"
+        android:textSize="22sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvLocationInfo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/location"
-        android:layout_below="@+id/tvHost"
-        android:layout_toEndOf="@+id/ivProfileImage"
-        android:maxLines="3"
-        android:minLines="1"
-        android:ellipsize="end"/>
-
-    <TextView
-        android:id="@+id/tvDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/ivProfileImage"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
+        android:layout_below="@+id/tvHost"
+        android:layout_centerHorizontal="true"
         android:ellipsize="end"
+        android:gravity="center"
         android:maxLines="3"
         android:minLines="1"
-        android:layout_gravity="center"
-        android:text="@string/event_description"
-        android:layout_marginTop="5dp"/>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
-        android:layout_margin="5dp"
-        android:layout_below="@+id/tvDescription" />
+        android:text="@string/location"
+        android:textColor="#000000" />
 
     <TextView
         android:id="@+id/tvHost"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="25dp"
         android:layout_below="@+id/tvEventName"
-        android:layout_toEndOf="@+id/ivProfileImage"
-        android:text="@string/host"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="10dp"
+        android:ellipsize="end"
         android:maxLines="1"
-        android:ellipsize="end"/>
-
+        android:text="@string/host"
+        android:textColor="#000000" />
 
 
 </RelativeLayout>
