--- a/app/src/main/res/layout/item_update.xml
+++ b/app/src/main/res/layout/item_update.xml
@@ -8,8 +8,11 @@
     <TextView
         android:id="@+id/notification"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_weight="0.05" />
+        android:layout_weight="0.05"
+        android:paddingBottom="10dp"
+        android:textColor="#000000"
+        android:textSize="19sp" />
 
 </RelativeLayout>
