--- a/app/src/main/res/layout/navigational.xml
+++ b/app/src/main/res/layout/navigational.xml
@@ -2,12 +2,14 @@
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/toolbar_home"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/toolbar_home"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:fitsSystemWindows="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:background="#E10028">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,12 +22,16 @@
             android:layout_width="294dp"
             android:layout_height="50dp"
             android:layout_alignParentTop="true"
+            android:layout_toStartOf="@+id/btnFilter"
             android:actionViewClass="android.support.v7.widget.SearchView"
             android:gravity="start"
             android:theme="@style/SearchViewTheme"
+            app:commitIcon="@drawable/smallsearch"
             app:iconifiedByDefault="false"
             app:queryHint="Search Events"
-            android:layout_toStartOf="@+id/btnFilter"/>
+            app:searchHintIcon="@drawable/smallsearch"
+            app:searchIcon="@drawable/smallsearch"
+            tools:searchHintIcon="@drawable/smallsearch" />
 
         <ImageButton
             android:id="@+id/btnFilter"
