--- a/app/src/main/res/drawable/recycleshadow.xml
+++ b/app/src/main/res/drawable/recycleshadow.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#CABBBBBB"/>
-
+            <corners android:radius="2dp" />
         </shape>
     </item>
 
@@ -11,9 +11,10 @@
         android:left="0dp"
         android:right="0dp"
         android:top="0dp"
-        android:bottom="1dp">
+        android:bottom="2dp">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white"/>
+            <corners android:radius="2dp" />
         </shape>
     </item>
 </layer-list>
