--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
+    android:layout_marginBottom="7dp"
+    android:layout_marginTop="7dp"
     android:background="@drawable/viewevents_border"
-    android:elevation="6dp"
+    android:elevation="2dp"
     android:orientation="vertical">
 
     <ImageView
@@ -14,9 +15,6 @@
         android:layout_height="170dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_margin="1.5dp"
-        android:layout_marginLeft="1.5dp"
-        android:layout_marginRight="1.dp"
         android:background="@drawable/three_border_orange"
         android:foregroundGravity="center_horizontal"
         android:topLeftRadius="5dp"
@@ -47,6 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvHost"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="5dp"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="3"
