--- a/app/src/main/res/drawable/chat_rounded_rect_bg.xml
+++ b/app/src/main/res/drawable/chat_rounded_rect_bg.xml
@@ -4,11 +4,11 @@
 
     <!--TODO changes the color for the right side text bubble-->
     <corners android:radius="4dp"/>
-    <solid android:color="@color/black"/>
+    <solid android:color="@color/red_user"/>
     <!--TODO changes the border color for the text bubble, Increase dp to set thickness of border. Delete if not needed-->
     <stroke
         android:width="1dp"
-        android:color="@color/black"/>
+        android:color="@color/red_user"/>
 
 
 </shape>
