--- a/app/src/main/res/drawable/chat_rounded_rect_other.xml
+++ b/app/src/main/res/drawable/chat_rounded_rect_other.xml
@@ -4,11 +4,11 @@
     <!--TODO changes the color for the left side text bubble-->
 
     <corners android:radius="4dp"/>
-    <solid android:color="@color/orange_600"/>
+    <solid android:color="@color/black"/>
     <!--TODO changes the border color for the text bubble, Increase dp to set thickness of border. Delete if not needed-->
     <stroke
         android:width="1dp"
-        android:color="@color/grey_300"/>
+        android:color="@color/black"/>
 
 
 </shape>
