--- a/app/src/main/res/drawable/circle_accent.xml
+++ b/app/src/main/res/drawable/circle_accent.xml
@@ -5,7 +5,7 @@
     <size
         android:width="@dimen/user_icon_width"
         android:height="@dimen/user_icon_height"/>
-        <solid android:color="@color/black"/>
+        <solid android:color="@color/red_user"/>
 
 
 </shape>
