--- a/app/src/main/res/drawable/circle_accent_other.xml
+++ b/app/src/main/res/drawable/circle_accent_other.xml
@@ -5,7 +5,7 @@
     <size
         android:width="@dimen/user_icon_width"
         android:height="@dimen/user_icon_height"/>
-    <solid android:color="@color/orange_600"/>
+    <solid android:color="@color/black"/>
 
 
 </shape>
