--- a/app/src/main/res/layout/activity_user_listing.xml
+++ b/app/src/main/res/layout/activity_user_listing.xml
@@ -17,7 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@color/red_user"
             app:elevation="0dp"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:title="@string/app_name" />
