--- a/app/src/main/res/layout/fragment_event_details.xml
+++ b/app/src/main/res/layout/fragment_event_details.xml
@@ -21,27 +21,16 @@
                 android:id="@+id/tvHost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-<<<<<<< HEAD
                 android:layout_marginBottom="5dp"
-<<<<<<< HEAD
                 android:layout_alignParentTop="true"
-                android:layout_marginTop="10dp"
-=======
->>>>>>> 50fb9fd39b1902ee6f252ae52397cb9d57855ff2
-=======
                 android:gravity="center"
->>>>>>> aa84051c2a93f8143d733cb65a9c023a8b821e06
                 android:text="@string/host"
                 android:textColor="#000000"
                 android:textAppearance="@android:style/TextAppearance.Large"
                 android:textSize="18sp"
-<<<<<<< HEAD
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"/>
-=======
-                android:layout_below="@+id/line"
+                android:layout_marginTop="10dp"
                 android:layout_centerHorizontal="true" />
->>>>>>> aa84051c2a93f8143d733cb65a9c023a8b821e06
 
             <TextView
                 android:textColor="#000000"
@@ -56,46 +45,26 @@
                 android:layout_centerHorizontal="true" />
 
             <TextView
-<<<<<<< HEAD
                 android:id="@+id/tvEventLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvEventInfo"
                 android:layout_marginStart="10dp"
                 android:text="Event Location"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:layout_centerHorizontal="true"/>
 
             <TextView
-=======
                 android:textColor="#000000"
-
->>>>>>> aa84051c2a93f8143d733cb65a9c023a8b821e06
                 android:id="@+id/tvEventDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/event_description"
                 android:layout_below="@+id/line2"
-<<<<<<< HEAD
                 android:layout_marginBottom="5dp"
                 android:layout_marginStart="10dp"
-<<<<<<< HEAD
-                />
-=======
-                android:layout_alignStart="@+id/tvEventName" />
-=======
-                android:layout_centerHorizontal="true" />
->>>>>>> aa84051c2a93f8143d733cb65a9c023a8b821e06
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tvEventInfo"
-                android:text="Event Location"
-                android:id="@+id/tvEventLocation"
-                android:layout_marginStart="10dp"
-                android:textSize="16sp"/>
->>>>>>> 50fb9fd39b1902ee6f252ae52397cb9d57855ff2
+                 />
 
             <View
                 android:id="@+id/line2"
@@ -103,7 +72,8 @@
                 android:layout_height="1dp"
                 android:background="@android:color/darker_gray"
                 android:layout_margin="5dp"
-                android:layout_below="@+id/tvEventLocation" />
+                android:layout_below="@+id/tvEventLocation"
+                />
 
             <View
                 android:id="@+id/line3"
