--- a/app/src/main/res/layout/item_all_user_listing.xml
+++ b/app/src/main/res/layout/item_all_user_listing.xml
@@ -7,37 +7,39 @@
     android:clickable="true"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:paddingBottom="@dimen/padding_small"
-    android:paddingEnd="@dimen/padding_avg"
-    android:paddingStart="@dimen/padding_avg"
-    android:paddingTop="@dimen/padding_small">
-
-    <TextView
-        android:id="@+id/text_view_user_alphabet"
+    android:paddingEnd="@dimen/padding_avg">
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:id="@+id/user_image" />
+    <ImageView
+        android:id="@+id/imgBlock"
+        android:layout_width="15dp"
+        android:layout_height="120dp" />
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/circle_accent"
-        android:gravity="center"
-        android:maxEms="1"
-        android:textAllCaps="true"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/grey_100"
-        android:textStyle="bold"
-        tools:text="a" />
+        android:paddingStart="10dp">
+        <TextView
+            android:layout_alignParentTop="true"
+            android:id="@+id/text_view_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/grey_700"
+            tools:text="abcd@xyz.com" />
+        <TextView
+            android:id="@+id/text_view_last_message"
+            android:layout_below="@id/text_view_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
 
-    <android.support.v4.widget.Space
-        android:layout_width="@dimen/space_avg"
-        android:layout_height="wrap_content" />
+    </RelativeLayout>
 
-    <TextView
-        android:id="@+id/text_view_username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/grey_700"
-        tools:text="abcd@xyz.com" />
+
 
 
 </LinearLayout>
