--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -63,12 +63,13 @@
 
     </LinearLayout>
 
-    <Button
+    <ImageButton
         android:id="@+id/btnGoogleMaps"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/launch_google_maps"
-        android:layout_below="@+id/linearLayout"
-        android:layout_alignParentStart="true" />
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:background="#d6d1ce"
+        android:layout_margin="20dp"/>
 
 </RelativeLayout>
