--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -77,6 +77,7 @@
             app:tabIndicatorHeight="5dp"
             app:tabSelectedTextColor="#F03A18"
             app:tabTextColor="#000000"
+            android:background="@drawable/top_border"
             android:elevation="10dp"/>
     </FrameLayout>
 
